--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -27,4 +29,9 @@ code {
 .my-masonry-grid_column > div { /* change div to reference your elements you put in <Masonry> */
   background: white;
   margin-bottom: 30px;
+}
+
+.btn-melon {
+  border-color: #ff5757;
+  color: #ff5757;
 }
